--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <article id="geografis" class="card">
 	<h2>Geografis</h2>
-	<img src="aset\geografis.jpg" alt="Geografis" class="featured-image" />
+	<img src="https://github.com/stnkbhj/Submission/blob/29f00d02ca223258520cf4a277a5ab87db64c9b3/geografis.jpg" alt="Geografis" class="featured-image" />
 	<p>
     Kota Tegal terletak 165 km sebelah barat Kota Semarang atau 329 km sebelah timur Jakarta. 
     terletak di antara 109°08’–109°10’ Bujur Timur dan 6°50’–6°53’ Lintang selatan, 
