--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div id="content">
 		<article id="sejarah" class="card">
 	<h2>Sejarah</h2>
-	<img src="aset\sejarah.jpg" alt="Sejarah" class="featured-image" />
+	<img src="https://github.com/stnkbhj/Submission/blob/500e80bb1c359a9300bc3fbe00f3b45027cc3427/sejarah.jpg" alt="Sejarah" class="featured-image" />
 
 	<p>
     Pada masa lalu, Tegal adalah desa kecil yang terletak di tepi muara Kali Gung, dengan nama Tetegal. 
