--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
 	<h3>Pemandian Air Panas Guci</h3>
-	<img src="aset\gucii.jpg" alt="Farm house" class="featured-image" />
+	<img src="https://github.com/stnkbhj/Submission/blob/a4a68c9a9e2ec6757d0046d5a2cb6940196358ba/gucii.jpg" alt="Farm house" class="featured-image" />
 	<p>
 		Wisata Guci merupakan taman wisata air panas yang ada di daerah Tegal. 
 		Kawasan ini berada di hamparan bukit berada mengelilingi taman wisata Guci dan mengelilingi Gunung Slamet yang menjulang tinggi di hadapan mata sehingga membuat suasana semakin nyaman. 
