--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	</p>
 
 	<h3>Museum Semedo</h3>
-	<img src="aset\semedo.png" alt="Bosscha" class="featured-image" />
+	<img src="https://github.com/stnkbhj/Submission/blob/f4afeacd2ffd5b694836517ff3f03a7d38cb20b3/semedo.png" alt="Bosscha" class="featured-image" />
 	<p>
 		Museum yang terletak di Semedo, Kec. Kedungbanteng, Kabupaten Tegal Jawa Tengah patut untuk dilirik wisatawan lokal. 
 		Museum Situs Semedo ini mengusung tema yang sama dengan Museum Sangiran yang berada di Sragen Jawa Tengah, 
