--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<h2>Kota Tegal</h2>
 	<p>Kota Bahari</p>
 	<figure>
-		<img src="aset\lambang.png">
+		<img src="https://github.com/stnkbhj/Submission/blob/5b9439b46b977004343e23a09c2b25d348242ba5/lambang.png">
 		<figcaption>Lambang</figcaption>
 	</figure>
 </header>
